deploy/k8s/08-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cenotoo-dashboard
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: cenotoo
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: cenotoo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      nodePort: 30081
